--- a/html/ltr/demo/sc-employee-1.html
+++ b/html/ltr/demo/sc-employee-1.html
@@ -432,6 +432,68 @@
 
 
 
+									<!--begin::Col-->
+									<div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+										<!--begin::Card-->
+										<div class="card card-custom gutter-b card-stretch">
+											<!--begin::Body-->
+											<div class="card-body pt-8">
+												
+												<!--begin::User-->
+												<div class="d-flex align-items-end mb-7">
+													<!--begin::Pic-->
+													<div class="d-flex align-items-center">
+														<!--begin::Pic-->
+														<div class="flex-shrink-0 mr-2 mt-lg-0 mt-3">
+															<div class="symbol symbol-circle symbol-lg-75">
+																<img src="../../../assets/media/users/300_2.jpg" alt="image" />
+															</div>
+															<div class="symbol symbol-lg-75 symbol-circle symbol-primary d-none">
+																<span class="font-size-h3 font-weight-boldest">JM</span>
+															</div>
+														</div>
+														<!--end::Pic-->
+														<!--begin::Title-->
+														<div class="d-flex flex-column">
+															<h4 href="#" class="text-dark  text-hover-primary font-weight-bolder font-size-h1 mb-0">Charlie Stone</h4>
+															<span class="text-muted font-weight-bold">Head of Development</span>
+														</div>
+														<!--end::Title-->
+													</div>
+													<!--end::Title-->
+												</div>
+												<!--end::User-->
+
+
+												<!--begin::Info-->
+												<div class="mb-7 mt-13">
+													<div class="d-flex justify-content-between align-items-center">
+														<span class="text-dark-75 font-weight-bolder mr-2">Email:</span>
+														<a href="#" class="text-muted text-hover-primary">luca@festudios.com</a>
+													</div>
+													<div class="d-flex justify-content-between align-items-cente my-1">
+														<span class="text-dark-75 font-weight-bolder mr-2">Phone:</span>
+														<a href="#" class="text-muted text-hover-primary">44(76)34254578</a>
+													</div>
+													<div class="d-flex justify-content-between align-items-center">
+														<span class="text-dark-75 font-weight-bolder mr-2">Location:</span>
+														<span class="text-muted font-weight-bold">Barcelona</span>
+													</div>
+												</div>
+												<!--end::Info-->
+												<a href="#" class="btn btn-block btn-sm btn-light-warning font-weight-bolder text-uppercase py-4">Details</a>
+											</div>
+											<!--end::Body-->
+										</div>
+										<!--end::Card-->
+									</div>
+									<!--end::Col-->
+
+
+
+
+
+
 
 
 
