adding pagination grid list employees

--- a/html/ltr/demo/sc-employee-3.html
+++ b/html/ltr/demo/sc-employee-3.html
@@ -340,7 +340,8 @@
                         </div> -->
 
                         <div class="table-responsive">
-                            <div class="mb-4"> </div>
+                            <!-- <div class="mb-4 ml-1"> <span><a href="" class="btn btn-primary btn-smmb-1 mb-sm-0 mr-0 mr-sm-1" ><i class="fas fa-plus"></i> &nbsp;Register New Employee</a></span>
+                            </div> -->
                             <hr>
                             <!--Dekat app-invoice-list.js dah ada search and filter data-->
                             <div class="d-flex align-items-center mx-50 row pt-0 pb-1">                            
