--- a/html/ltr/demo/sc-employee-4.html
+++ b/html/ltr/demo/sc-employee-4.html
@@ -656,10 +656,10 @@
 
 					</div>   
                     
-					<!-- <div class="card-body row justify-content-between">
+					<div class="card-body row justify-content-between">
                         <div id="firstLast1-content" class="border-grey border-lighten-2 mb-1">12 of 250 records</div>
                         <ul class="pagination firstLast1-links"><li class="page-item first"><a href="#" class="page-link">First</a></li><li class="page-item prev"><a href="#" class="page-link">Prev</a></li><li class="page-item"><a href="#" class="page-link">1</a></li><li class="page-item active"><a href="#" class="page-link">2</a></li><li class="page-item"><a href="#" class="page-link">3</a></li><li class="page-item"><a href="#" class="page-link">4</a></li><li class="page-item"><a href="#" class="page-link">5</a></li><li class="page-item next"><a href="#" class="page-link">Next</a></li><li class="page-item last"><a href="#" class="page-link">Last</a></li></ul>
-                    </div> -->
+                    </div>
 
                 </section>
                 <!-- Employee Grid end -->
