--- a/html/ltr/demo/sc-employee-3.html
+++ b/html/ltr/demo/sc-employee-3.html
@@ -232,7 +232,7 @@
                 </li>
                 <li class=" nav-item"><a class="d-flex align-items-center" href="#"><i data-feather='check-square'></i><span class="menu-title text-truncate" data-i18n="Email">Attendance</span></a>
                 </li>
-                <li class="nav-item"><a class="d-flex align-items-center" href="#"><i data-feather='user'></i><span class="menu-title text-truncate" data-i18n="Chat">Employee</span></a>
+                <li class="active"><a class="d-flex align-items-center" href="#"><i data-feather='user'></i><span class="menu-title text-truncate" data-i18n="Chat">Employee</span></a>
                 </li>
                 <li class="nav-item"><a class="d-flex align-items-center" href="#"><i data-feather='user-x'></i></i><span class="menu-title text-truncate" data-i18n="Todo">Leave</span></a>
                 </li>
@@ -251,7 +251,7 @@
 
                <li class=" navigation-header"><span data-i18n="Apps &amp; Pages">Inventory</span><i data-feather="more-horizontal"></i>
                 </li>
-                <li class="active"><a class="d-flex align-items-center" href="#"><i data-feather='file-text'></i><span class="menu-title text-truncate" data-i18n="Email">Quotation</span></a>
+                <li class="nav-item"><a class="d-flex align-items-center" href="#"><i data-feather='file-text'></i><span class="menu-title text-truncate" data-i18n="Email">Quotation</span></a>
                 </li>
                 <li class=" nav-item"><a class="d-flex align-items-center" href="#"><i data-feather='shopping-cart'></i><span class="menu-title text-truncate" data-i18n="Chat">Invoice</span></a>
                 </li>
