Revert "update features"
This reverts commit bb52d296482849491b87adee2baf891f715d4ad9.

--- a/html/ltr/demo/sc-employee-2.html
+++ b/html/ltr/demo/sc-employee-2.html
@@ -532,7 +532,6 @@
                                 </li>
                             </ul>
                             <div class="tab-content">
-                                
                                 <!-- Account Tab starts -->
                                 <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
                                  
@@ -853,7 +852,7 @@
                                                 </div>
                                             </div> -->
                                             <div class="col-12 d-flex flex-sm-row flex-column mt-2">
-                                                <button type="submit" id="type-success" class="btn button mb-1 mb-sm-0 mr-0 mr-sm-1">Save Changes</button>
+                                                <button type="submit" class="btn button mb-1 mb-sm-0 mr-0 mr-sm-1">Save Changes</button>
                                                 <button type="reset" class="btn buttonoutline">Reset</button>
                                             </div>
                                         </div>
@@ -878,7 +877,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="form-group">
                                                     <label for="designation">Designation</label>
-                                                    <input id="designation" type="text" class="form-control" value="" placeholder="Enter Designation" name="designation" />
+                                                    <input id="designation" type="text" class="form-control" value="" placeholder="Full name must match on IC" name="designation" />
                                                 </div>
                                             </div>
                                             <div class="col-lg-4 col-md-6">
@@ -1304,9 +1303,7 @@
     <script src="../../../app-assets/js/scripts/charts/chart-chartjs.js"></script>
     <!-- END: Page JS-->
 
-    <!-- BEGIN: Page JS-->
-    <script src="../../../app-assets/js/scripts/extensions/ext-component-sweet-alerts.js"></script>
-    <!-- END: Page JS-->
+
 
     <!-- BEGIN: Page JS-->
     <script src="../../../app-assets/js/scripts/cards/card-analytics.js"></script>
